# LykOS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.chariot
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Lyk/: Lyk.sln  Lyk.vcxproj
apps/: init.c  meson.build
kernel/: meson.build  meson_options.txt
kernel/cross-files/: aarch64.ini  x86_64.ini
kernel/include/: assert.h  bootreq.h  cpu.h  hhdm.h  log.h  proc.h  thread.h  tmpfs.h  vfs.h
kernel/include/arch/: clock.h  irq.h  lcpu.h  paging.h  serial.h  thread.h  timer.h  types.h
kernel/include/arch/aarch64/: evt.h  gic.h  int.h
kernel/include/arch/aarch64/devices/: gic.h
kernel/include/arch/x86_64/: ioport.h  msr.h
kernel/include/arch/x86_64/abi/: stack.h
kernel/include/arch/x86_64/devices/: hpet.h  ioapic.h  lapic.h  pit.h
kernel/include/arch/x86_64/tables/: gdt.h  idt.h  tss.h
kernel/include/dev/: acpi.h  block.h  device.h  input.h  network.h
kernel/include/dev/acpi/tables/: madt.h
kernel/include/fs/: ramfs.h  ustar.h  vfs.h
kernel/include/gfx/: console.h  draw.h  font.h  simplefb.h
kernel/include/mm/: heap.h  kmem.h  mm.h  pm.h  vm.h
kernel/include/mod/: ksym.h  module.h
kernel/include/proc/: exec.h  fd.h  init.h  proc.h  sched.h  smp.h  thread.h
kernel/include/sync/: spinlock.h
kernel/include/sys/: syscall.h
kernel/include/uapi/: errno.h
kernel/include/utils/: elf.h  list.h  math.h  printf.h  string.h  xarray.h
kernel/linker-scripts/: aarch64.ld  x86_64.ld
kernel/source/: bootreq.c  kernel.c  log.c  meson.build  panic.c  setup.c  vfs.c
kernel/source/arch/aarch64/: clock.c  entry.c  evt.S  evt.c  irq.c  lcpu.c  meson.build  paging.c  serial.c  thread.S  thread.c
kernel/source/arch/aarch64/devices/: gic.c  gicv2.c  meson.build  timer.c
kernel/source/arch/x86_64/: entry.c  entry_BACKUP_33013.c  entry_BASE_33160.c  entry_LOCAL_33013.c  entry_LOCAL_33160.c  int.c  ioport.c  ioport.h  lcpu.c  meson.build  msr.c  msr.h  paging.c  sched.asm  serial.c  syscall.asm  syscall.c  tcb.c  thread.asm  thread.c  userspace.S  userspace.asm
kernel/source/arch/x86_64/abi/: stack.c
kernel/source/arch/x86_64/devices/: hpet.c  ioapic.c  lapic.c  meson.build  pic.c  pit.c  rtc.c
kernel/source/arch/x86_64/tables/: gdt.asm  gdt.c  idt.asm  idt.c  internal.h  meson.build  tss.c
kernel/source/dev/: acpi.c  device.c  meson.build
kernel/source/fs/: initrd.c  meson.build  ramfs.c  ustar.c  vfs.c
kernel/source/gfx/: console.c  draw.c  font.c  meson.build  simplefb.c
kernel/source/mm/: buddy.c  heap.c  internal.h  kmem.c  meson.build  mm.c  pm.c  vm.c
kernel/source/mod/: ksym.c  meson.build  module.c
kernel/source/proc/: exec.c  fd.c  init.c  meson.build  proc.c  sched.c  smp.c  thread.c
kernel/source/sched/: internal.h  meson.build  mlfq.c  sched.c
kernel/source/sync/: meson.build  spinlock.c
kernel/source/sys/: fileio.c  io.c  memory.c  meson.build  misc.c  proc.c  syscall.c
kernel/source/utils/: list.c  meson.build  printf.c  string.c  xarray.c
modules/: meson.build  meson_options.txt
modules/misc/: meson.build
modules/misc/test_module/: main.c  meson.build
qemu/: log.txt
recipes/tools/: autotools.chariot  binutils.chariot  gcc.chariot  pkgconf.chariot  reconfigure.chariot
scripts/: a2l.sh  objdump.sh  run.sh
support/: limine.conf
